force-app/main/default/objects/UserStory__c/fields/Component_Specification__c.field-meta.xml
<CustomField>
    <fullName>Component_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Specification</label>
    <referenceTo>ComponentSpecification__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>