force-app/main/default/objects/UserStory__c/fields/ComponentSpec__c.field-meta.xml
<CustomField>
    <fullName>ComponentSpec__c</fullName>
    <label>Component Spec</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>