force-app/main/default/objects/UserStory__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>