force-app/main/default/objects/UserStory__c/fields/Formatted_Name__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Name__c</fullName>
    <description>Will be used to fetch corresponding Spec.</description>
    <formula>Name +&apos;-&apos;+Title__c +&apos;;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Name</label>
    <type>Text</type>
</CustomField>