force-app/main/default/objects/UserStory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Epic__c</columns>
    <columns>ComponentSpec__c</columns>
    <columns>Formatted_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>